--- a/style.css
+++ b/style.css
@@ -1,3 +1,6 @@
+*{
+	box-sizing:border-box;
+}
 .status{
 	width:8px;
 	height:8px;
@@ -10,4 +13,28 @@
 }
 .orange{
 	background-color:#ff725d;
+}
+
+body{
+	background-color:#00E7D0 ;
+	font-family:Arial;
+}
+
+#container{
+	width:1250px;
+	height:600px;
+	background:#eff3f7;
+	margin: 75px auto;
+	font-size:0;
+	border-radius:5px;
+	overflow:hidden;
+}
+
+aside{
+	width:350px;
+	height:600px;
+	background-color:#3b3e49;
+	display:inline-block;
+	font-size:15px;
+	vertical-align:top;
 }
