--- a/style.css
+++ b/style.css
@@ -21,7 +21,8 @@
 }
 
 body{
-	background-color:#00E7D0 ;
+
+	background-image: linear-gradient(to right, #00E7D0 , #DA64EE );
 	font-family:Arial;
 }
 
@@ -48,6 +49,7 @@ aside input{
 	border:none;
 	border-radius:3px;
 	color:#fff;
+	background-image:url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/1940306/ico_search.png);
 	background-repeat:no-repeat;
 	background-position:170px;
 	background-size:40px;
@@ -55,13 +57,7 @@ aside input{
 aside input::placeholder{
 	color:#fff;
 }
-aside ul{
-	padding-left:20px;
-	margin:0;
-	list-style-type:none;
-	overflow-y: auto;
-	height:690px;
-}
+
 aside li{
 	padding:10px 0;
 }
@@ -103,9 +99,15 @@ aside{
 	background-color:#3b3e49;
 	display:inline-block;
 	font-size:15px;
+
 	vertical-align:top;
 }
+.side{
+	overflow-y:auto;
+	height:480px;
+	padding:10px 10px 10px 10px;
 
+}
 main{
 	width:900px;
 	height:600px;
@@ -116,7 +118,7 @@ main{
 
 main header{
 	height:100px;
-	padding:30px 20px 30px 40px;
+	padding:20px 20px 30px 40px;
 }
 main header > *{
 	display:inline-block;
@@ -125,16 +127,18 @@ main header > *{
 main header img:first-child{
 	border-radius:50%;
 }
-main header img:last-child{
-	width:24px;
-	margin-top:8px;
-}
+
 main header div{
-	margin-left:10px;
-	margin-right:145px;
+	margin-left:30px;
+	margin-right:400px;
+}
+main header i{
+	margin-top: 15px;
+	margin-left: 10px;
+
 }
 main header h2{
-	font-size:16px;
+	font-size:18px;
 	margin-bottom:5px;
 }
 main header h3{
@@ -148,7 +152,7 @@ main header h3{
 	margin:0;
 	list-style-type:none;
 	overflow-y:auto;
-	height:420px;
+	height:390px;
 	border-top:2px solid #fff;
 	border-bottom:2px solid #fff;
 }
@@ -200,7 +204,7 @@ main header h3{
 }
 
 main footer{
-	height:80px;
+	height:110px;
 	padding:20px 30px 10px 20px;
 }
 main footer textarea{
